C# algorithms + experiments C algorithms + experiments Java algorithms Removed old experiments